--- a/analysis.html
+++ b/analysis.html
@@ -48,6 +48,13 @@
             <!-- ATVI stock analysis post -->
             <section class="analysis-container">
                 <div class="analysis-content">
+                    <p>6/1/2020</p>
+                    <h3>NASDAQ: FB</h3>
+                    <h4>Facebook, Inc.</h4>
+                    <a href="analysis-pages/fb" class="link">Read More</a>
+                </div>
+                <hr>
+                <div class="analysis-content">
                     <p>5/18/2020</p>
                     <h3>NASDAQ: ATVI</h3>
                     <h4>Activision Blizzard, Inc.</h4>
