--- a/blog.html
+++ b/blog.html
@@ -45,17 +45,6 @@
                 <p>New blogs every Friday. I talk about events that happened throughout the week, company earnings, my thoughts on the market</p>
             </section>
             <section class="blog-links">
-                <!-- 
-                <div class="blog-content">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
-                </div>
-                <a href="">Read More</a>
-                <hr>
-                -->
-            
-                
                 <div class="blog-content">
                     <img src="img/stock-exchange-board.jpg" alt="New York Stock Exchange">
                     <h3>Welcome to Blog!</h3>
@@ -65,12 +54,21 @@
                 </div>
                 <br>
                 <hr>
+                <!-- 
                 <div class="blog-content">
                     <img src="" alt="">
-                    <h3>The Bullearish Market and Twump Issues</h3>
-                    <p>This was a packed week, with the S&P 500 breaking above the 3,000 psychological level, breaking above the 200 ema, big drop in video game stocks, Trumps battle with Twitter, or as I call it, "Twump" and Section 230, fear of another trade war with China, 100,000 deaths from COVID, vaccines, and many more things I can't covere cuz ain't nobody got time for that.</p>
+                    <h3></h3>
+                    <p></p>
                 </div>
                 <a href="">Read More</a>
+                <hr>
+                -->
+                <div class="blog-content">
+                    <img src="blog-posts/blog-img/bullearish.svg" alt="Candle Sticks">
+                    <h3>The Bullearish Market and Twump Issues</h3>
+                    <p>This was a packed week, with the S&P 500 breaking above the 3,000 psychological level, breaking above the 200 ema, big drop in video game stocks, Trumps battle with Twitter, or as I call it, "Twump" and Section 230, fear of another trade war with China, 100,000 deaths from COVID, vaccines, and many more things I can't covere cuz ain't nobody got time for that.</p>
+                    <a href="blog-posts/bullearish-market">Read More</a>
+                </div>
                 <hr>
                 <div class="blog-content">
                     <img src="blog-posts/blog-img/franklin.PNG" alt="GTA 5 Franklin">
