Updated styles and contents

--- a/blog.html
+++ b/blog.html
@@ -59,10 +59,17 @@
                     <img src="" alt="">
                     <h3></h3>
                     <p></p>
+                    <a href="">Read More</a>
                 </div>
-                <a href="">Read More</a>
                 <hr>
-                -->
+            -->
+                <div class="blog-content">
+                    <img src="img/diversity-scanner.jpg" alt="TD Ameritrade scanner">
+                    <h3>Diversification, Diversification, Diversification... It's useless!</h3>
+                    <p>Many people are told that diversification is a really good "strategy" for any investor. But what's the point in putting small amounts of money into a bunch of companies you don't understand if you know how to pick stocks? If you feel the need to diversify because a small portfolio doesn't let you sleep at night, either you need to sell those stocks or get better at analyzing businesses. More isn't always better in the stock market, assuming you're not an amateur.</p>
+                    <a href="blog-posts/diversification-blog">Read More</a>
+                </div>
+                <hr>
                 <div class="blog-content">
                     <img src="blog-posts/blog-img/bullearish.svg" alt="Candle Sticks">
                     <h3>The Bullearish Market and Twump Issues</h3>
